Settings: change evervolv settings to toolbox.
Change-Id: Ie67ab5129c1609379433240d07d5bacdda496cb8

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1171,7 +1171,7 @@
     <!-- Main Settings screen setting option summary text for the itme to go into the screen with data sync settings-->
     <string name="sync_settings_summary">Add or remove accounts and change account settings</string>
 
-	<string name="evparts_settings">Evervolv Settings</string>
+	<string name="evparts_settings">Evervolv Toolbox</string>
 
     <!-- Main Settings screen, setting option name to go into search settings -->
     <string name="search_settings">Search</string>
